# cpp_starter

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh
src/: CMakeLists.txt  adder.cpp  adder.h  main.cpp
test/: CMakeLists.txt  test_adder.cpp
